--- a/stats.ui
+++ b/stats.ui
@@ -46,7 +46,7 @@
     </layout>
    </item>
    <item row="0" column="0" colspan="2">
-    <layout class="QHBoxLayout" name="horizontalLayout_2"/>
+    <layout class="QVBoxLayout" name="verticalLayout"/>
    </item>
   </layout>
  </widget>
