--- a/window.ui
+++ b/window.ui
@@ -472,7 +472,7 @@
        </rect>
       </property>
       <property name="currentIndex">
-       <number>2</number>
+       <number>0</number>
       </property>
       <item>
        <property name="text">
@@ -487,6 +487,11 @@
       <item>
        <property name="text">
         <string>Even subsets</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>No alignment</string>
        </property>
       </item>
      </widget>
