--- a/ui/NewSHaRK.ui
+++ b/ui/NewSHaRK.ui
@@ -209,6 +209,9 @@
         <property name="defaultDropAction">
          <enum>Qt::MoveAction</enum>
         </property>
+        <property name="alternatingRowColors">
+         <bool>true</bool>
+        </property>
        </widget>
       </item>
      </layout>
