--- a/ui/Alignment.ui
+++ b/ui/Alignment.ui
@@ -15,7 +15,23 @@
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0" colspan="2">
-    <widget class="QComboBox" name="comboBox"/>
+    <widget class="QComboBox" name="comboBox">
+     <item>
+      <property name="text">
+       <string>Full sample</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Taxon samples</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Even samples</string>
+      </property>
+     </item>
+    </widget>
    </item>
    <item row="0" column="2" colspan="3">
     <widget class="QLabel" name="label">
@@ -69,7 +85,11 @@
     </widget>
    </item>
    <item row="5" column="0" colspan="3">
-    <widget class="QLineEdit" name="lineEdit"/>
+    <widget class="QLineEdit" name="lineEdit">
+     <property name="placeholderText">
+      <string>Reference sequence path</string>
+     </property>
+    </widget>
    </item>
    <item row="5" column="3" colspan="2">
     <widget class="QToolButton" name="toolButton">
