--- a/ui/Input.ui
+++ b/ui/Input.ui
@@ -28,16 +28,6 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="0">
-    <widget class="QComboBox" name="comboBox"/>
-   </item>
-   <item row="1" column="1" colspan="2">
-    <widget class="QLabel" name="label">
-     <property name="text">
-      <string>Sequence Alphabet</string>
-     </property>
-    </widget>
-   </item>
    <item row="3" column="0" colspan="3">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
@@ -53,7 +43,7 @@
      <property name="title">
       <string>GenBank Handling</string>
      </property>
-     <widget class="QRadioButton" name="radioButton">
+     <widget class="QCheckBox" name="checkBox">
       <property name="geometry">
        <rect>
         <x>10</x>
@@ -66,7 +56,7 @@
        <string>Parse features as individual sequences</string>
       </property>
      </widget>
-     <widget class="QRadioButton" name="radioButton_2">
+     <widget class="QCheckBox" name="checkBox_2">
       <property name="geometry">
        <rect>
         <x>10</x>
@@ -79,6 +69,27 @@
        <string>Parse multiple sequences in file</string>
       </property>
      </widget>
+    </widget>
+   </item>
+   <item row="1" column="2">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>Sequence Alphabet</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0" colspan="2">
+    <widget class="QComboBox" name="comboBox">
+     <item>
+      <property name="text">
+       <string>DNA ambigous</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>RNA</string>
+      </property>
+     </item>
     </widget>
    </item>
   </layout>
