Complete block interface files

--- a/ui/Input.ui
+++ b/ui/Input.ui
@@ -90,6 +90,11 @@
        <string>RNA</string>
       </property>
      </item>
+     <item>
+      <property name="text">
+       <string>Amino acid</string>
+      </property>
+     </item>
     </widget>
    </item>
   </layout>
