--- a/ui/Alignment.ui
+++ b/ui/Alignment.ui
@@ -18,7 +18,7 @@
     <widget class="QComboBox" name="comboBox">
      <item>
       <property name="text">
-       <string>Full sample</string>
+       <string>Even samples</string>
       </property>
      </item>
      <item>
@@ -28,7 +28,7 @@
      </item>
      <item>
       <property name="text">
-       <string>Even samples</string>
+       <string>Full sample</string>
       </property>
      </item>
     </widget>
@@ -45,10 +45,20 @@
      <property name="text">
       <string>Use multiprocessing</string>
      </property>
+     <property name="checked">
+      <bool>true</bool>
+     </property>
     </widget>
    </item>
    <item row="1" column="2" colspan="2">
-    <widget class="QSpinBox" name="spinBox_3"/>
+    <widget class="QSpinBox" name="spinBox_3">
+     <property name="minimum">
+      <number>1</number>
+     </property>
+     <property name="maximum">
+      <number>10</number>
+     </property>
+    </widget>
    </item>
    <item row="1" column="4">
     <widget class="QLabel" name="label_4">
@@ -58,7 +68,17 @@
     </widget>
    </item>
    <item row="2" column="0">
-    <widget class="QSpinBox" name="spinBox"/>
+    <widget class="QSpinBox" name="spinBox">
+     <property name="minimum">
+      <number>-1000</number>
+     </property>
+     <property name="maximum">
+      <number>0</number>
+     </property>
+     <property name="value">
+      <number>-400</number>
+     </property>
+    </widget>
    </item>
    <item row="2" column="1">
     <widget class="QLabel" name="label_2">
@@ -68,7 +88,14 @@
     </widget>
    </item>
    <item row="3" column="0">
-    <widget class="QSpinBox" name="spinBox_2"/>
+    <widget class="QSpinBox" name="spinBox_2">
+     <property name="minimum">
+      <number>-1000</number>
+     </property>
+     <property name="maximum">
+      <number>0</number>
+     </property>
+    </widget>
    </item>
    <item row="3" column="1" colspan="2">
     <widget class="QLabel" name="label_3">
@@ -81,6 +108,9 @@
     <widget class="QCheckBox" name="checkBox_2">
      <property name="text">
       <string>Diagonal optimisation</string>
+     </property>
+     <property name="checked">
+      <bool>true</bool>
      </property>
     </widget>
    </item>
