--- a/ui/Filtering.ui
+++ b/ui/Filtering.ui
@@ -6,23 +6,23 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>249</width>
-    <height>120</height>
+    <width>206</width>
+    <height>146</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
+   <item row="1" column="0" colspan="2">
+    <widget class="QLineEdit" name="lineEdit"/>
+   </item>
    <item row="0" column="0" colspan="2">
     <widget class="QToolButton" name="toolButton_2">
      <property name="text">
       <string>Browse synonyms</string>
      </property>
     </widget>
-   </item>
-   <item row="1" column="0" colspan="2">
-    <widget class="QLineEdit" name="lineEdit"/>
    </item>
    <item row="1" column="2">
     <widget class="QToolButton" name="toolButton">
@@ -31,14 +31,18 @@
      </property>
     </widget>
    </item>
-   <item row="3" column="0" colspan="3">
-    <widget class="QDialogButtonBox" name="buttonBox">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
-     </property>
+   <item row="2" column="0" colspan="2">
+    <widget class="QComboBox" name="comboBox">
+     <item>
+      <property name="text">
+       <string>Positive</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Negative</string>
+      </property>
+     </item>
     </widget>
    </item>
    <item row="2" column="2">
@@ -48,8 +52,46 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="0" colspan="2">
-    <widget class="QComboBox" name="comboBox"/>
+   <item row="4" column="0" colspan="3">
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="0" colspan="2">
+    <widget class="QComboBox" name="comboBox_2">
+     <item>
+      <property name="text">
+       <string>All present</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>All absent</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Any present</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Any absent</string>
+      </property>
+     </item>
+    </widget>
+   </item>
+   <item row="3" column="2">
+    <widget class="QLabel" name="label_2">
+     <property name="text">
+      <string>If condition met</string>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
