--- a/ui/Reduction.ui
+++ b/ui/Reduction.ui
@@ -6,107 +6,84 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>189</width>
-    <height>132</height>
+    <width>208</width>
+    <height>119</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QDialogButtonBox" name="buttonBox">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>90</y>
-     <width>161</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="orientation">
-    <enum>Qt::Horizontal</enum>
-   </property>
-   <property name="standardButtons">
-    <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
-   </property>
-  </widget>
-  <widget class="QComboBox" name="comboBox">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>10</y>
-     <width>91</width>
-     <height>22</height>
-    </rect>
-   </property>
-   <item>
-    <property name="text">
-     <string>Same taxon</string>
-    </property>
+  <layout class="QGridLayout" name="gridLayout">
+   <item row="0" column="0">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>Delete with same</string>
+     </property>
+    </widget>
    </item>
-   <item>
-    <property name="text">
-     <string>Same locus</string>
-    </property>
+   <item row="0" column="1">
+    <widget class="QComboBox" name="comboBox_2">
+     <item>
+      <property name="text">
+       <string>Species</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Genus</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Family</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Locus</string>
+      </property>
+     </item>
+    </widget>
    </item>
-  </widget>
-  <widget class="QComboBox" name="comboBox_2">
-   <property name="geometry">
-    <rect>
-     <x>110</x>
-     <y>10</y>
-     <width>71</width>
-     <height>22</height>
-    </rect>
-   </property>
-   <item>
-    <property name="text">
-     <string>Species</string>
-    </property>
+   <item row="1" column="0">
+    <widget class="QLabel" name="label_2">
+     <property name="text">
+      <string>Quality comparison</string>
+     </property>
+    </widget>
    </item>
-   <item>
-    <property name="text">
-     <string>Genus</string>
-    </property>
+   <item row="1" column="1">
+    <widget class="QComboBox" name="comboBox_3">
+     <item>
+      <property name="text">
+       <string>Simple</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>with MUSCLE</string>
+      </property>
+     </item>
+    </widget>
    </item>
-   <item>
-    <property name="text">
-     <string>Family</string>
-    </property>
+   <item row="2" column="0" colspan="2">
+    <widget class="QCheckBox" name="checkBox">
+     <property name="text">
+      <string>Consensus sequence</string>
+     </property>
+    </widget>
    </item>
-  </widget>
-  <widget class="QComboBox" name="comboBox_3">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>40</y>
-     <width>91</width>
-     <height>22</height>
-    </rect>
-   </property>
-   <item>
-    <property name="text">
-     <string>Simple</string>
-    </property>
+   <item row="3" column="0" colspan="2">
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+     </property>
+    </widget>
    </item>
-   <item>
-    <property name="text">
-     <string>MUSCLE</string>
-    </property>
-   </item>
-  </widget>
-  <widget class="QCheckBox" name="checkBox">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>70</y>
-     <width>131</width>
-     <height>18</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Consensus sequence</string>
-   </property>
-  </widget>
+  </layout>
  </widget>
  <resources/>
  <connections>
