--- a/ui/Sampling.ui
+++ b/ui/Sampling.ui
@@ -11,7 +11,11 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Sampling</string>
+  </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>../pic/256x256_BlackLogo.png</normaloff>../pic/256x256_BlackLogo.png</iconset>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
